resources/validatorxrechnung/1.2.1/CHANGELOG.md
# Changelog

All notable changes to the Validator Configuration for XRechnung and this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/).
<!--
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
-->


## v2019-06-24

This release is compatible to XRechnung 1.2.1.

Because of new CEN Rules 1.2.1 it might break your validation and business workflow. Please evaluate impact!

### Changed

- Now include XRechnung Schematron Rules 1.2.1
- Include CEN Rules 1.2.1


## v2018-12-19

This release is compatible to XRechnung 1.2.0.

Because of new XRechnung Schematron Rules 1.2.0 it might break your validation and business workflow. Please evaluate impact!

### Added

- Changelog

### Changed

- Now include XRechnung Schematron Rules 1.2.0
- Made Scenario match only new XRechnung Version 1.2.0 Specification Identifier BT-24 (see #6)
